# deep_agent_test

./: .codex.md  .dockerignore  .env.example  .gitattributes  .gitignore  .importlinter  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: researcher.md  spec-reviewer.md
.claude/commands/: update-docs.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature.yml
.github/workflows/: ci.yml  claude-review.yml  deploy.yml
.openai/: config.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_domain_tables.py  0003_add_workflow_schema.py  0004_fix_focheck_initial_status.py  0005_drop_stp_status.py  0006_add_llm_cost_log.py  0007_add_agent_type_to_triage_runs.py  0008_add_rag_chunks.py  0010_add_input_date_to_trades.py  (+1 more)
docs/: README.md  Skills.md  ai-driven-development.md  architecture.md  backend.md  demo_hybrid_agent.md  demo_mcp_calendar.md  development.md  frontend.md  issue-drafts.md  progress.md  requirements.md  security.md  tasks.md  tasks_done.md  testing.md
features/: README.md  bo_triage_hitl.feature  counterparty_search.feature  fo_max_tenor.feature  fo_value_date_validation.feature  fo_value_date_weekend.feature
frontend/: .env.example  Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
mcp_server/: Dockerfile  external_data_server.py
scripts/: entrypoint.sh  export_openapi.py
src/: main.py
tests/: conftest.py
(+210 files in other folders)
