[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "deep-agent-test"
version = "0.1.0"
description = "STP Exception Triage Agent — LangGraph learning project"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres==3.0.5",
    "langchain-anthropic==1.4.0",
    "fastapi==0.135.3",
    "uvicorn==0.43.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.9",
    "psycopg[binary]==3.3.3",
    "slowapi==0.1.9",
    "langchain-openai==0.3.16",
    "pgvector==0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "mypy==1.20.0",
]
gcp = [
    # GCP Secret Manager クライアント
    # SECRET_BACKEND=gcp の場合のみ必要
    # インストール: pip install -e ".[gcp]"
    "google-cloud-secret-manager==2.20.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: requires real LLM (ANTHROPIC_API_KEY must be set)"]
